# portifyai

./: .gitignore  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  open-in-vyro.mjs  package.json  patch_page.py  projects_guide.md
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  railway.toml  test_ai_feature.py  test_suggest_skills.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_hashed_password_to_users.py  0003_add_s3_key_and_filename_to_resumes.py  0004_add_performance_indexes.py  fb6d4ef46e79_add_clerk_user_id.py
backend/app/: database.py  main.py  security.py
backend/app/core/: audit_log.py  cache.py  config.py  correlation.py  enums.py  exceptions.py  limiter.py  logging_config.py  rate_limit.py  security_config.py  sentry.py
backend/app/db/: mixins.py  session.py
backend/app/models/: __init__.py  ai_job.py  mixins.py  portfolio.py  resume.py  template.py  user.py
backend/app/routers/: auth.py  billing.py  portfolio.py  resume.py
backend/app/schemas/: auth.py  portfolio.py  responses.py  resume.py
backend/app/services/: ai_client.py  image_optimizer.py  portfolio_generator.py  resume_builder.py  resume_parser.py  s3_service.py  stripe_service.py
backend/app/templates/aurora/: config.json  template.html
backend/app/templates/cyber/: config.json  template.html
backend/app/templates/executive/: template.html
backend/app/templates/minimal/: config.json  template.html
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: generate_portfolio.py  parse_resume.py
backend/scripts/: seed_templates.py
backend/tests/: conftest.py  factories.py  mocks.py  test_celery_tasks.py  test_resume_parser.py
backend/tests/integration/: test_auth_router.py  test_billing_router.py  test_portfolio_router.py  test_resume_router.py
backend/tests/unit/: test_portfolio_generator.py  test_resume_builder.py  test_resume_parser.py  test_security.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  (+5 more)
(+74 files in other folders)
