[project]
name = "vyroportify-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    # storage
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0.0",
    "email-validator>=2.0.0",
    # resume parsing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "anthropic>=0.40.0",
    # task queue
    "celery[redis]>=5.4.0",
    # templating
    "jinja2>=3.1.0",
    # payments
    "stripe>=10.0.0",
    # observability
    "sentry-sdk[fastapi,sqlalchemy,celery]>=2.0.0",
    # rate limiting
    "slowapi>=0.1.9",
    # http client (for OpenRouter AI)
    "httpx>=0.27.0",
    # clerk jwt verification
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.0",
    # redis client
    "redis>=5.0.0",
    # image processing
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "anyio[asyncio]>=4.0.0",
    "fakeredis>=2.23.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "alembic/*",
    ".venv/*",
    "app/core/sentry.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
